<resources>
    <string name="app_name">闲来棋牌</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="login">登录</string>
    <string name="username">账号：</string>
    <string name="username_hint">请输入账号</string>
    <string name="password">密码：</string>
    <string name="password_hint">请输入密码</string>
    <string name="donnot_have_username">没有账号？点击注册</string>
    <string name="login_success">登录成功</string>
    <string name="login_fail">登录失败</string>
    <string name="username_pwd_empty">用户名或密码不能为空</string>
    <string name="register">注册</string>
    <string name="version">当前版本：V</string>
    <string name="contact">联系方式：</string>
    <string name="contact_hint">请输入联系方式</string>
    <string name="nickname">昵称：</string>
    <string name="invate_code">邀请码：</string>
    <string name="sex">性别：</string>
    <string name="nickname_hint">请输入昵称</string>
    <string name="invite_code_hint">请输入邀请码</string>
    <string name="enter_your_details">请将内容填完整!</string>
    <string name="register_fail">注册失败,请检查网络状态!</string>
    <string name="register_success">恭喜!注册成功</string>
    <string name="register_success2">注册成功</string>
    <string name="back_login">返回登录</string>
    <string name="account_register_too_short">账号长度必须大约6</string>
    <string name="account_password_too_short">密码长度必须大约6</string>
    <string name="account_nick_too_short">昵称长度必须大约6</string>
    <string name="recharge_manage">充值提现管理</string>
    <string name="my_integral">我的积分</string>
    <string name="scanbind">设备绑定</string>
    <string name="unbind">设备解绑</string>
    <string name="recharge">充值提现</string>
    <string name="recharge_detail">明细</string>
    <string name="add_device">添加设备</string>
    <string name="detected_devices">Detected devices</string>
    <string name="associating">设备组网</string>
    <string name="scan_ing">正在扫描</string>
    <string name="net_ing">正在组网</string>
    <string name="bindeds">绑定了</string>
    <string name="bind_devices">绑定设备</string>
    <string name="device_numb">个设备</string>
    <string name="net_ing_create">正在组网设备,请稍等！！！</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown">Unknown</string>
    <string name="device">Device</string>
    <string name="controller">Controller</string>
    <string name="select_a_device">Select a device</string>
    <string name="associate_device">组网设备</string>
    <string name="associate_gateway">Associate gateway</string>
    <string name="qr_to_uuid_fail">Failed to read UUID from QR code</string>
    <string name="select_device">Association not possible. Select a device first.</string>
    <string name="no_result_found">No devices found around you. We will populate them as soon as we detect them.</string>
    <string name="device_associated">组网成功</string>
    <string name="association_failed">组网失败</string>
    <string name="wrong_short_code">Short code field can not be empty</string>
    <string name="wrong_auth_code">Wrong auth code. Association cancelled.</string>
    <string name="associate_config_query_fail">设备组网成功，但是设备信息没有获取到</string>
    <string name="le_disconnected">设备桥连接断开,停止扫描绑定,等待桥连接成功</string>
    <string name="decibel_milliwatts" translatable="false">dBm</string>
    <string name="personal_information">个人信息</string>
    <string name="my_message">我的消息</string>
    <string name="introduction">欢迎光临，三公游戏！</string>
    <string name="service">客服</string>
    <string name="call">13579113579</string>
    <string name="service_phone">联系客服</string>
    <string name="about">关于</string>
    <string name="deviceList">设备调试列表</string>
    <string name="add">添加设备</string>
    <string name="room_list">房间列表</string>
    <string name="press_again">再按一次退出程序</string>
    <string name="press_again2">再按一次房间</string>
    <string name="total_integral">总积分</string>
    <string name="sure_recharge">确认充值</string>
    <string name="recharge_record">充值记录</string>
    <string name="withdrawal_record">提现记录</string>
    <string name="money_is_empty">请输入充值金额</string>
    <string name="set_rate">设置抽成</string>
    <string name="submit">提交</string>
    <string name="set_succ">设置成功</string>
    <string name="set_fail">设置失败</string>
    <string name="tips_net_error">网络不给力\n点击屏幕继续加载</string>
    <string name="tips_content_empty">空空如野</string>
    <string name="loading_busy">努力加载中...</string>
    <string name="tips">抵制不良游戏，拒绝盗版游戏。注意自我保护，谨防上当受骗。适度游戏益闹，沉迷游戏伤身。合理安排时间，享受健康生活。</string>
    <string name="place1">1</string>
    <string name="place2">2</string>
    <string name="place3">3</string>
    <string name="place4">4</string>
    <string name="place5">5</string>
    <string name="place6">6</string>
    <string name="status0">准备中</string>
    <string name="status1">下注中</string>
    <string name="status2">封盘中</string>
    <string name="status3">结算中</string>
    <string name="status4">结算完成</string>
    <string name="status5">场次作废</string>
    <string name="action_settings">Settings</string>
    <string name="start">开始</string>
    <string name="stop">结束</string>
    <string name="serial_number">流水号</string>
    <string name="win_lose">盈亏</string>
    <string name="zero_second">0s</string>
    <string name="game_not_start">请先等待房主开启游戏</string>
    <string name="game_already_start">游戏已经开始</string>
    <string name="already_bet">已经下注</string>
    <string name="game_already_start_cannot_clear">游戏已经开始，不能清除</string>
    <string name="already_bet_cannot_clear">已经下注成功，不能清除</string>
    <string name="bet_success">下注成功</string>
    <string name="select_place">请先选择下注方位</string>
    <string name="integral_shortage">积分不足</string>
    <string name="please_select_place_or_integral">请先选择方位和下注积分</string>
    <string name="please_select_place">请先选择方位</string>
    <string name="generate_success">开始下注成功</string>
    <string name="cancel_success">场次作废成功</string>
    <string name="fengpan_success">封盘成功</string>
    <string name="account_carsh">账号余额（元）</string>
    <string name="account_charge">账号充值</string>
    <string name="account_charge_support">支持银行卡、支付宝，财付通、微信</string>
    <string name="user_exchange">用户提现</string>
    <string name="user_exchange_detail">支持各大银行及地方银行提现</string>
    <string name="user_recharge_record">充值记录</string>
    <string name="user_record_detail">充值明细查询</string>
    <string name="user_withdrawal_record_detail">提现明细查询</string>
    <string name="current_account">当前账号:</string>
    <string name="contact_service">联系客服</string>
    <string name="input_charge_amount">请输入充值金额</string>
    <string name="select_charge_way">选择支付方式</string>
    <string name="select_bank">网银转账</string>
    <string name="select_bank_detail">大额支出专用绿色通道，首选支持方式</string>
    <string name="select_wechat">微信支付</string>
    <string name="select_wechat_detail">添加微信好友，微信支付</string>
    <string name="select_alipay">支付宝转账</string>
    <string name="select_alipay_detail">支付宝转账绿色通道</string>
    <string name="bank">网上银行</string>
    <string name="alipay">支付宝</string>
    <string name="wechat">微信</string>
    <string name="chargestatus1">待充值</string>
    <string name="chargestatus2">已充值</string>
    <string name="chargestatus3">作废</string>
    <string name="chargestatus4">驳回</string>
    <string name="submit_success">提交成功，请耐心等待客服审核。</string>
    <string name="submit_fail">提交失败</string>
    <string name="user_withdrawal_title">提现</string>
    <string name="add_account">新增账号</string>
    <string name="havenot_account">没有提现账号？去新增</string>
    <string name="user_withdrawal_record">提现记录</string>
    <string name="user_withdrawal_value">可提现金额（元）</string>
    <string name="user_card_num">卡号：</string>
    <string name="user_card_name">持卡人：</string>
    <string name="user_card_bank">银行卡：</string>
    <string name="empty_data">数据不能为空</string>
    <string name="money_shortage">账户余额不足</string>
    <string name="account_empty">请先选择或创建账号</string>
    <string name="user_withdrawal_tips">提款金额</string>
    <string name="user_withdrawal_rang">可提款金额(1—200,000)</string>
    <string name="sumbit_apply">提交申请</string>
    <string name="available_balance">可用余额(元)</string>
    <string name="outstanding_balance">未结余额(元)</string>
    <string name="recharge_total_amount">充值总额(元)</string>
    <string name="withdrawal_total_amount">提现总额(元)</string>
    <string name="settlement_type">类型</string>
    <string name="start_date">起始日期</string>
    <string name="end_date">结束日期</string>
    <string name="order_detail">订单详情</string>
    <string name="order_serial_number">流水号</string>
    <string name="order_status">状态</string>
    <string name="order_value">金额</string>
    <string name="order_time">时间</string>
    <string name="platform_card_no">平台卡号</string>
    <string name="platform_card_no2">平台卡号:</string>
    <string name="order_note_code">备注码</string>
    <string name="card_no">卡号</string>
    <string name="platform_card_user_name">持卡人</string>
    <string name="platform_card_user_name2">持卡人:</string>
    <string name="platform_card_bank_name">发卡行</string>
    <string name="platform_card_bank_name2">发卡行:</string>
    <string name="status_1">待兑换</string>
    <string name="status_2">已兑换</string>
    <string name="status_3">作废</string>
    <string name="status_4">驳回</string>
    <string name="status_5">待充值</string>
    <string name="status_6">已充值</string>
    <string name="withdrawal_detail">提现详情</string>
    <string name="exchange_no">提现流水号</string>
    <string name="exchange_value">提现金额</string>
    <string name="rechange_user">充值用户名称</string>
    <string name="exchange_user">提现用户名称</string>
    <string name="exchange_recorde">提现记录</string>
    <string name="rechange_recorde">充值记录</string>
    <string name="game_start">开始</string>
    <string name="game_deciding">封盘</string>
    <string name="game_invalid">作废</string>
    <string name="game_balance">结算</string>
    <string name="check_net">检查网络环境</string>
    <string name="check_neting">正在检查网络中，请稍等...</string>
    <string name="no_devices">还没有组网一个设备</string>
    <string name="bluetooth_needed_to_control_devices">你需要在蓝牙桥连接成功之后才可以控制设备</string>
    <string name="bluetooth_needed_to_add_devices">你需要在蓝牙桥连接成功之后才可以组网添加设备</string>
    <string name="bluetooth_needed_to_delete_devices">你需要在蓝牙初始化完成之后才可以解除设备组网状态</string>
    <string name="bluetooth_selected_to_add_devices">你需要在蓝牙通道初始化完成之后才可以组网添加设备</string>
    <string name="bluetooth_selected_to_delete_devices">你需要在蓝牙通道初始化完成之后才可以解除设备组网状态</string>
    <string name="you_can_not_control_your_device_until_bridge_is_connected">你不能控制你的设备,直到蓝牙桥连接成功！</string>
    <string name="not_net">网络连接失败,请检查网络连接是否正常后再试！</string>
    <string name="place_cannot_be_deleted">Sorry the place can not be deleted. You must have at least one place.</string>
    <string name="delete_place">Delete place</string>
    <string name="delete_place_confirmation">Are you sure that you want to delete this place?</string>
    <string name="error_importing_db">Error importing the database</string>
    <string name="db_imported">Database imported</string>
    <string name="invalid_long_name">The device name must be maximum 20 characters long!</string>
    <string name="resetting_device">正在重置这台设备，请稍等...</string>
    <string name="only_the_place_owner_can_add_new_controllers">Only the place owner can add new controllers.</string>
    <string name="only_the_place_owner_can_add_new_devices">只有该组网的拥有者才可以添加设备</string>
    <string name="only_the_place_owner_can_share_the_place">Only the place owner can share the place.</string>
    <string name="mesh">Mesh</string>
    <string name="android_beam">Beam</string>
    <string name="other">Other</string>
    <string name="imports_title">Import</string>
    <string name="gallerys_title">Gallery</string>
    <string name="slideshow_title">Slideshow</string>
    <string name="tools_title">Tools</string>
    <string name="communicate_title">Communicate</string>
    <string name="share_title">Share</string>
    <string name="send_title">Send</string>
    <string name="cancel">取消</string>
</resources>