<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/my_integral"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/my_integral" />
        <item
            android:id="@+id/recharge"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/recharge" />
        <item
            android:id="@+id/personal_information"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/personal_information" />
        <item
            android:id="@+id/my_message"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/my_message" />
        <item
            android:id="@+id/service"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/service" />
        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/about" />
    </group>

</menu>
