<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal">

    <com.wyzk.lottery.view.PlaceView
        android:id="@+id/p1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:item_num_text="0"
        app:item_place_peo="0"
        app:item_place_text="@string/place1" />

    <com.wyzk.lottery.view.PlaceView
        android:id="@+id/p2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:item_num_text="0"
        app:item_place_peo="0"
        app:item_place_text="@string/place2" />

    <com.wyzk.lottery.view.PlaceView
        android:id="@+id/p3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"

        app:item_num_text="0"
        app:item_place_peo="0"
        app:item_place_text="@string/place3" />

    <com.wyzk.lottery.view.PlaceView
        android:id="@+id/p4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"

        app:item_num_text="0"
        app:item_place_peo="0"
        app:item_place_text="@string/place4" />

    <com.wyzk.lottery.view.PlaceView
        android:id="@+id/p5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"

        app:item_num_text="0"
        app:item_place_peo="0"
        app:item_place_text="@string/place5" />

    <com.wyzk.lottery.view.PlaceView
        android:id="@+id/p6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"

        app:item_num_text="0"
        app:item_place_peo="0"
        app:item_place_text="@string/place6" />
</LinearLayout>