<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/dimens10"
        android:layout_marginTop="@dimen/dimens10"
        android:text="@string/add_account"
        android:textSize="@dimen/dimens18"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens10"
        android:background="@color/white"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/rg_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_bank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/bank"/>

            <RadioButton
                android:id="@+id/rb_alipay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimens13"
                android:text="@string/alipay"/>

            <RadioButton
                android:id="@+id/rb_wechat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimens13"
                android:text="@string/wechat"/>
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/dimens80"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/dimens20"
                android:gravity="right"
                android:text="@string/user_card_name"
                android:textColor="@color/main_text_color"
                android:textSize="@dimen/dimens20"/>


            <EditText
                android:id="@+id/et_user_card_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimens40"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/dimens20"
                android:layout_marginRight="@dimen/dimens13"
                android:textColor="@color/main_text_color"
                android:textSize="@dimen/dimens20"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="@dimen/dimens10"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/dimens80"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/dimens20"
                android:gravity="right"
                android:text="@string/user_card_bank"
                android:textColor="@color/main_text_color"
                android:textSize="@dimen/dimens20"/>

            <EditText
                android:id="@+id/et_bank_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimens40"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/dimens20"
                android:layout_marginRight="@dimen/dimens13"
                android:textColor="@color/main_text_color"
                android:textSize="@dimen/dimens20"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="@dimen/dimens10"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/dimens80"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/dimens20"
                android:gravity="right"
                android:text="@string/user_card_num"
                android:textColor="@color/main_text_color"
                android:textSize="@dimen/dimens20"/>

            <EditText
                android:id="@+id/et_card_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/dimens20"
                android:layout_marginRight="@dimen/dimens13"
                android:textColor="@color/main_text_color"
                android:textSize="@dimen/dimens20"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimens15"
        android:layout_marginLeft="@dimen/dimens15"
        android:layout_marginRight="@dimen/dimens15"
        android:layout_marginTop="@dimen/dimens10">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="@dimen/dimens35"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancel"
            android:textSize="@dimen/dimens16"/>

        <TextView
            android:id="@+id/tv_sure"
            android:layout_width="0dp"
            android:layout_height="@dimen/dimens35"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sure"
            android:textSize="@dimen/dimens16"/>

    </LinearLayout>
</LinearLayout>